<?xml version="1.0"?>
<package>
  <name>kuka_robot</name>
  <version>0.1.0</version>
  <description>The kuka_robot package</description>

  <maintainer email="marco.esposito@tum.de">Marco Esposito</maintainer>
  <maintainer email="cjrosales@gmail.com">Carlos J. Rosales</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>lwr_hw</run_depend>
  <run_depend>kuka_description</run_depend>
  <run_depend>lwr_controllers</run_depend>

  <export>
  </export>
</package>
